orden prod, seguimiento agregado

--- a/prueba_gerente_supervisor/supervisor.html
+++ b/prueba_gerente_supervisor/supervisor.html
@@ -4,20 +4,60 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Panel de Supervisor - Local</title>
+<link rel="stylesheet" href="css/ventas.css">
 <style>
-body { font-family: Arial, sans-serif; margin:0; }
+body { font-family: Arial, sans-serif; margin:0; background-color:#121212; color:#e0e0e0; }
 .dashboard { display: flex; min-height:100vh; }
-.sidebar { background:#1e3a8a; color:white; width:220px; padding:20px; }
-.sidebar button { display:block; width:100%; margin:10px 0; padding:10px; background:#2563eb; border:none; color:white; border-radius:5px; cursor:pointer; }
-.main-content { flex:1; padding:20px; background:#f9fafb; }
-.producto-item { border:1px solid #ccc; padding:10px; margin-bottom:10px; border-radius:5px; }
-.producto-item h4 { margin:5px 0; }
-table { border-collapse: collapse; margin-top:10px; width:100%; }
-table th, table td { border:1px solid #ccc; padding:5px; text-align:left; }
+.sidebar { background:#1e1e1e; color:#e0e0e0; width:220px; padding:20px; border-right:1px solid #333; }
+.sidebar h2 { color:#55a630; text-align:center; margin-bottom:20px; }
+.sidebar button { width:100%; padding:10px; margin:10px 0; border:none; border-radius:5px; cursor:pointer; background:#2a2a2a; color:#e0e0e0; font-weight:bold; transition:0.3s; }
+.sidebar button:hover { background:#55a630; color:#000; }
+
+.main-content { flex:1; padding:20px; background:#121212; }
+
+.producto-item { 
+  border:1px solid #333; 
+  padding:10px; 
+  margin-bottom:10px; 
+  border-radius:5px; 
+  display:flex; 
+  gap:10px; 
+  align-items:center; 
+  background:#1e1e1e;
+}
+.producto-item h4 { margin:0; color:#55a630; }
+.producto-item select, .producto-item input { padding:5px; border-radius:4px; border:1px solid #333; background:#2a2a2a; color:#e0e0e0; }
+
+.producto-item button { padding:5px 10px; background:#dc3545; color:white; border:none; border-radius:4px; cursor:pointer; transition:0.3s; }
+.producto-item button:hover { background:#a71d2a; }
+
+button[type="submit"] { padding:10px 15px; background:#55a630; color:#000; border:none; border-radius:5px; cursor:pointer; font-weight:bold; transition:0.3s; margin-top:10px; }
+button[type="submit"]:hover { background:#4a8c2a; color:#fff; }
+
+button[type="button"]:not(.producto-item button) { padding:8px 12px; border-radius:4px; margin-top:5px; }
+
+table { width:100%; border-collapse:collapse; margin-top:15px; background:#2a2a2a; border-radius:6px; overflow:hidden; }
+table th, table td { padding:10px; text-align:center; border-bottom:1px solid #333; color:#e0e0e0; }
+table th { background:#1e1e1e; }
+table tr:hover { background:#3e3e3e; }
+
+/* BOTONES SEGUIMIENTO OP */
+.btn-editar { background-color:#007bff; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer; font-size:13px; margin:2px; transition:0.3s; }
+.btn-editar:hover { background-color:#0056b3; }
+
+.btn-eliminar { background-color:#dc3545; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer; font-size:13px; margin:2px; transition:0.3s; }
+.btn-eliminar:hover { background-color:#a71d2a; }
+
 .modal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:1000; }
-.modal-content { background:#fff; padding:20px; border-radius:8px; width:500px; max-height:80%; overflow-y:auto; position:relative; }
-.close-modal { position:absolute; top:10px; right:15px; cursor:pointer; font-size:18px; font-weight:bold; }
-@media(max-width:600px){.dashboard{display:block;}.sidebar{width:100%; margin-bottom:10px;}.main-content{width:100%;}.modal-content{width:95%;}}
+.modal-content { background:#1e1e1e; color:#e0e0e0; padding:20px; border-radius:8px; width:500px; max-height:80%; overflow-y:auto; position:relative; }
+.close-modal { position:absolute; top:10px; right:15px; cursor:pointer; font-size:18px; font-weight:bold; color:#fff; }
+
+@media(max-width:600px){
+  .dashboard{display:block;}
+  .sidebar{width:100%; margin-bottom:10px;}
+  .main-content{width:100%;}
+  .producto-item { flex-direction:column; align-items:flex-start; }
+}
 </style>
 </head>
 <body>
@@ -42,7 +82,7 @@ table th, table td { border:1px solid #ccc; padding:5px; text-align:left; }
         <div class="form-group">
           <label>Productos:</label>
           <div id="productosContainer"></div>
-          <button type="button" onclick="agregarProducto()">➕ Agregar Producto</button>
+          <button type="button" onclick="agregarProducto()" style="padding:5px 10px; font-size:13px;">➕ Agregar Producto</button>
         </div>
         <button type="submit">Crear OP</button>
         <button type="button" onclick="cancelarOP()">Cancelar</button>
@@ -79,8 +119,6 @@ table th, table td { border:1px solid #ccc; padding:5px; text-align:left; }
 
 <script>
 let ordenesProduccion = JSON.parse(localStorage.getItem("ordenesProduccion")) || [];
-
-// Lista de productos predefinidos
 const productosDisponibles = [
   "Medallón de Pollo",
   "Arvejas",
@@ -89,31 +127,18 @@ const productosDisponibles = [
   "Milanesa de Carne"
 ];
 
-// Guardar OPs
-function guardarOPs() { localStorage.setItem("ordenesProduccion", JSON.stringify(ordenesProduccion)); }
+function guardarOPs(){ localStorage.setItem("ordenesProduccion", JSON.stringify(ordenesProduccion)); }
 function mostrarSeccion(id){ 
   document.querySelectorAll('.seccion').forEach(s=>s.style.display='none'); 
   document.getElementById(id).style.display='block'; 
-
-  if(id === "ordenProduccion"){
-    document.getElementById("opNumero").value = generarNumeroOP();
-  }
+  if(id==='ordenProduccion') document.getElementById("opNumero").value = generarNumeroOP();
 }
+function generarNumeroOP(){ return `OP-2025-${(ordenesProduccion.length+1).toString().padStart(3,'0')}`; }
 
-// Generar número incremental de OP
-function generarNumeroOP(){
-  const año = 2025; // fijo como pediste
-  const numero = (ordenesProduccion.length + 1).toString().padStart(3,"0");
-  return `OP-${año}-${numero}`;
-}
-
-// PRODUCTOS
 function agregarProducto(){
-  const container = document.getElementById('productosContainer');
-  const div = document.createElement('div'); div.className='producto-item';
-
-  let opciones = productosDisponibles.map(p => `<option value="${p}">${p}</option>`).join('');
-
+  const container=document.getElementById('productosContainer');
+  const div=document.createElement('div'); div.className='producto-item';
+  let opciones=productosDisponibles.map(p=>`<option value="${p}">${p}</option>`).join('');
   div.innerHTML=`
     <h4>Producto</h4>
     <select name="productoNombre[]" required>
@@ -125,55 +150,33 @@ function agregarProducto(){
   `;
   container.appendChild(div);
 }
-function eliminarProducto(btn){ 
-  btn.parentElement.remove(); 
-  if(document.querySelectorAll('.producto-item').length===0) agregarProducto(); 
-}
-function cancelarOP(){ 
-  document.getElementById('opForm').reset(); 
-  document.getElementById('productosContainer').innerHTML=''; 
-  agregarProducto(); 
-  document.getElementById('ordenProduccion').style.display='none'; 
-}
+function eliminarProducto(btn){ btn.parentElement.remove(); if(document.querySelectorAll('.producto-item').length===0) agregarProducto(); }
+function cancelarOP(){ document.getElementById('opForm').reset(); document.getElementById('productosContainer').innerHTML=''; agregarProducto(); document.getElementById('ordenProduccion').style.display='none'; }
 
-// CREAR OP
-document.getElementById('opForm').addEventListener('submit', (e)=>{
+document.getElementById('opForm').addEventListener('submit',(e)=>{
   e.preventDefault();
-  const opNumero = document.getElementById('opNumero').value;
-  const productos = Array.from(document.querySelectorAll('.producto-item')).map(p=>({
-    nombre: p.querySelector('select[name="productoNombre[]"]').value,
-    cantidad: p.querySelector('input[name="productoCantidad[]"]').value
+  const opNumero=document.getElementById('opNumero').value;
+  const productos=Array.from(document.querySelectorAll('.producto-item')).map(p=>({
+    nombre:p.querySelector('select[name="productoNombre[]"]').value,
+    cantidad:p.querySelector('input[name="productoCantidad[]"]').value
   }));
-
-  const nuevaOP = {
-    opNumero,                // se usa como ID también
-    productos,
-    estado:'Pendiente',
-    fecha_emision:new Date().toISOString()
-  };
-
-  ordenesProduccion.push(nuevaOP);
-  guardarOPs();
-  cancelarOP();
-  mostrarSeccion('seguimientoOP');
-  cargarOP();
+  const nuevaOP={opNumero,productos,estado:'Pendiente',fecha_emision:new Date().toISOString()};
+  ordenesProduccion.push(nuevaOP); guardarOPs(); cancelarOP(); mostrarSeccion('seguimientoOP'); cargarOP();
 });
 
-// SEGUIMIENTO OP
 function cargarOP(){
-  const tabla = document.getElementById('tablaOP'); 
-  tabla.innerHTML='';
+  const tabla=document.getElementById('tablaOP'); tabla.innerHTML='';
   ordenesProduccion.forEach(op=>{
-    const tr = document.createElement('tr');
+    const tr=document.createElement('tr');
     tr.innerHTML=`
-      <td>${op.opNumero}</td> <!-- ID ahora es el número de OP -->
-      <td><button onclick="verOrden('${op.opNumero}')">📄 Ver Orden</button></td>
+      <td>${op.opNumero}</td>
+      <td><button class="btn-editar" onclick="verOrden('${op.opNumero}')">📄 Ver Orden</button></td>
       <td>${op.estado}</td>
       <td>${new Date(op.fecha_emision).toLocaleString()}</td>
       <td>
         ${op.estado==='Pendiente'
-          ? `<button onclick="editarOP('${op.opNumero}')">✏️ Editar</button>
-             <button onclick="eliminarOP('${op.opNumero}')">❌ Eliminar</button>`
+          ? `<button class="btn-editar" onclick="editarOP('${op.opNumero}')">✏️ Editar</button>
+             <button class="btn-eliminar" onclick="eliminarOP('${op.opNumero}')">❌ Eliminar</button>`
           : 'No disponible'}
       </td>
     `;
@@ -181,55 +184,23 @@ function cargarOP(){
   });
 }
 
-// VER ORDEN MODAL
 function verOrden(opNumero){
-  const op = ordenesProduccion.find(o=>o.opNumero===opNumero); 
-  if(!op) return;
-
-  let productosHtml = op.productos.map(p => `<p>${p.nombre} - Cantidad: ${p.cantidad}</p>`).join('');
-
-  let html=`
+  const op=ordenesProduccion.find(o=>o.opNumero===opNumero); if(!op) return;
+  let productosHtml=op.productos.map(p=>`<p>${p.nombre} - Cantidad: ${p.cantidad}</p>`).join('');
+  document.getElementById('detalleOrden').innerHTML=`
     <p><strong>Número OP:</strong> ${op.opNumero}</p>
     <p><strong>Fecha Emisión:</strong> ${new Date(op.fecha_emision).toLocaleString()}</p>
     <p><strong>Estado:</strong> ${op.estado}</p>
-    <h4>Productos:</h4>
-    ${productosHtml}
+    <h4>Productos:</h4>${productosHtml}
   `;
-
-  const modal = document.getElementById('modalOrden');
-  document.getElementById('detalleOrden').innerHTML = html;
-  modal.style.display = 'flex';
-
-  modal.onclick = function(e){
-    if(e.target === modal) cerrarModal();
-  }
+  const modal=document.getElementById('modalOrden'); modal.style.display='flex';
+  modal.onclick=function(e){if(e.target===modal) cerrarModal();}
 }
 
-// Cerrar modal
-function cerrarModal(){
-  const modal = document.getElementById('modalOrden');
-  modal.style.display = 'none';
-  modal.onclick = null;
-}
+function cerrarModal(){ const modal=document.getElementById('modalOrden'); modal.style.display='none'; modal.onclick=null; }
 
-// ELIMINAR ORDEN
-function eliminarOP(opNumero){
-  if(!confirm('¿Eliminar esta OP completa?')) return;
-  ordenesProduccion = ordenesProduccion.filter(o=>o.opNumero!==opNumero);
-  guardarOPs();
-  cargarOP();
-}
-
-// EDITAR OP
-function editarOP(opNumero){
-  const op = ordenesProduccion.find(o=>o.opNumero===opNumero); if(!op) return;
-  op.productos.forEach((p,i)=>{
-    const cantidad = prompt(`Editar cantidad de ${p.nombre}:`, p.cantidad);
-    if(cantidad) p.cantidad = cantidad;
-  });
-  guardarOPs();
-  cargarOP();
-}
+function eliminarOP(opNumero){ if(!confirm('¿Eliminar esta OP completa?')) return; ordenesProduccion=ordenesProduccion.filter(o=>o.opNumero!==opNumero); guardarOPs(); cargarOP(); }
+function editarOP(opNumero){ const op=ordenesProduccion.find(o=>o.opNumero===opNumero); if(!op) return; op.productos.forEach(p=>{ const cantidad=prompt(`Editar cantidad de ${p.nombre}:`,p.cantidad); if(cantidad) p.cantidad=cantidad; }); guardarOPs(); cargarOP(); }
 
 // Inicial
 agregarProducto();
